--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="result-amount" class="d-flex justify-content-center"></div>
         <!-- inner Html added by js  -->
-    </div> -->
+    </div>
     <!-- Book search result section  -->
     <div class="container">
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
