--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <body class="bg-light">
     <!-- Book search field -->
     <div class="container pt-4 pb-2">
+        <div class="logo w-25 mx-auto d-flex justify-content-center">
+            <img class="img-fluid" src="images/logo-removebg-preview.png" alt="">
+        </div>
         <h1 class="text-center text-uppercase text-success">Search your desired book</h1>
         <div class="input-group mb-3 w-75 mx-auto mw-100">
             <input id="search-input" type="text" class="form-control" placeholder="Enter boook or author name"
