--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         .result-amount-bar {
-            background-color: rgb(204, 248, 234);
+            background-color: rgb(119, 124, 122);
             border: 1px solid green;
-            padding: 5px 10px;
+            padding: 5px 20px;
             border-radius: 5px;
             font-size: 16px;
             margin: 0 auto 10px auto;
-            display: inline;
-
+            /* display: inline-block; */
+            color: white
         }
     </style>
 </head>
@@ -35,7 +35,7 @@
                 id="button-addon2">Search</button>
         </div>
     </div>
-    <div id="result-amount" class="d-flex justify-content-center"></div>
+    <div id="result-amount" class="d-flex flex-column align-items-center"></div>
     <!-- inner Html added by js  -->
     </div>
     <!-- Book search result section  -->
