--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         .result-amount-bar {
-            background-color: rgb(119, 124, 122);
-            border: 1px solid green;
+            background-color: rgb(255, 255, 255);
+            border: 1px solid rgb(15, 19, 15);
             padding: 5px 20px;
             border-radius: 5px;
             font-size: 16px;
             margin: 0 auto 10px auto;
             /* display: inline-block; */
-            color: white
+            color: rgb(38, 122, 42);
+            font-weight: bold;
         }
     </style>
 </head>
