--- a/index.html
+++ b/index.html
@@ -6,20 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Archive</title>
+    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <style>
-        .result-amount-bar {
-            background-color: rgb(255, 255, 255);
-            border: 1px solid rgb(15, 19, 15);
-            padding: 5px 20px;
-            border-radius: 5px;
-            font-size: 16px;
-            margin: 0 auto 10px auto;
-            /* display: inline-block; */
-            color: rgb(38, 122, 42);
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="bg-light">
@@ -36,7 +25,7 @@
                 id="button-addon2">Search</button>
         </div>
     </div>
-    <div id="result-amount" class="d-flex flex-column align-items-center"></div>
+    <div id="result-amount" class="d-flex flex-column align-items-center pb-2"></div>
     <!-- inner Html added by js  -->
     </div>
     <!-- Book search result section  -->
