--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <h1 class="text-center text-uppercase text-success">Search your desired book</h1>
         <div class="input-group mb-3 w-75 mx-auto mw-100">
-            <input id="search-input" type="text" class="form-control" placeholder="Enter boook or author name"
+            <input id="search-input" type="text" class="form-control" placeholder="Enter book or author name"
                 aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchBookByName()" class="btn btn-outline-success" type="button"
                 id="button-addon2">Search</button>
